# browser-engineering-study

./: .gitignore  LICENSE  README.md  part-1-loading-pages-1-downloading-web-pages.ipynb  part-1-loading-pages-2-viewing-documents.ipynb  part-1-loading-pages.ipynb  part-2-viewing-documents.ipynb  pyproject.toml
examples/: emoji-sample.html
src/browser/: __init__.py  tk_capture.py  url.py
