[project]
name = "browser-engineering-study"
version = "0.1.0"
description = "Web Browser Engineering study notes and code"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["ipykernel"]
# macOS: Jupyter 셀에서 Tk 창 스크린샷을 출력할 때 사용
macos = ["pyobjc-framework-Quartz", "pyobjc-framework-Cocoa"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
